--- a/src/static/stylesheets/media_properties/media-cards.module.scss
+++ b/src/static/stylesheets/media_properties/media-cards.module.scss
@@ -653,4 +653,8 @@
   padding: 30px 0;
   width: 100%;
   z-index: 0;
+
+  @media screen and (width <= 600px) {
+    padding: 0;
+  }
 }
